--- a/resource/sass/partial/_equipment.sass
+++ b/resource/sass/partial/_equipment.sass
@@ -16,7 +16,7 @@
           border: 2px solid $blue-color
           border-radius: 10px
           width: 82%
-          max-width: 82%
+          max-width: 270px
           padding-bottom: 77px
           ul
             list-style: none
@@ -37,12 +37,6 @@
               margin-top: 20px
       .main
         margin-left: -72px
-        .img-block
-          width: 100%
-          max-width: 100%
-          img
-            width: 100%
-            max-width: 100%
         p
           font-weight: 300
           font-size: 125%
