--- a/resource/css/queries.css
+++ b/resource/css/queries.css
@@ -374,6 +374,14 @@
     margin-top: 30px;
 }
 }
+
+@media screen and (max-width: 995px) {
+  .equip .container-fluid .row .main .img-block img {
+    max-width: 100%;
+    width: 100%;
+  }  
+}
+  
 @media screen and (max-width: 884px) {
   .equip .container-fluid .row .main .item-block .item
   {
