--- a/resource/sass/partial/_equipment.sass
+++ b/resource/sass/partial/_equipment.sass
@@ -1,4 +1,4 @@
-/*---------------------*/
+/*-----------------------*/
 /*-------EQIIPMENT------*/
 /*---------------------*/
 
@@ -16,7 +16,7 @@
           border: 2px solid $blue-color
           border-radius: 10px
           width: 82%
-          max-width: 270px
+          max-width: 313px
           padding-bottom: 77px
           ul
             list-style: none
