--- a/resource/sass/style.sass
+++ b/resource/sass/style.sass
@@ -3,7 +3,9 @@
 @import global/mixins
 @import global/general
 @import partial/ip
-@import partial/work
 @import partial/partner
 @import partial/industry
 @import partial/equipment  
+@import partial/news  
+@import partial/call-centr 
+@import partial/crm_new
